syntax = "proto3";

import "google/protobuf/empty.proto";

service ExampleGrpcService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc SubscribeUserInfoChanged (google.protobuf.Empty) returns (stream SubscribeUserInfoChangedResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
}

message SubscribeUserInfoChangedResponse {
  string message = 1;
}